force-app/main/default/objects/Contact/fields/number_of_Units_if_multifamily_PD__c.field-meta.xml
<CustomField>
    <fullName>number_of_Units_if_multifamily_PD__c</fullName>
    <description>PD = Property Details</description>
    <label># of Units (if multi-family)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>