force-app/main/default/objects/Contact/fields/NumberInvestPropSold_0_SBE__c.field-meta.xml
<CustomField>
    <fullName>NumberInvestPropSold_0_SBE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBE= Sponsor Background &amp; Experience</description>
    <label>NumberInvestPropSold 0</label>
    <type>Checkbox</type>
</CustomField>