force-app/main/default/objects/Contact/fields/NumberInvestPropSold_10_SBE__c.field-meta.xml
<CustomField>
    <fullName>NumberInvestPropSold_10_SBE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBE= Sponsor Background &amp; Experience</description>
    <label>NumberInvestPropSold 10+</label>
    <type>Checkbox</type>
</CustomField>