force-app/main/default/objects/Contact/fields/NumberInvestPropSold_1_5_SBE__c.field-meta.xml
<CustomField>
    <fullName>NumberInvestPropSold_1_5_SBE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBE= Sponsor Background &amp; Experience</description>
    <label>NumberInvestPropSold 1 - 5</label>
    <type>Checkbox</type>
</CustomField>