force-app/main/default/objects/Contact/fields/Numberofinvestmentpropertiessold__c.field-meta.xml
<CustomField>
    <fullName>Numberofinvestmentpropertiessold__c</fullName>
    <description>The field is populated from DocuSign template checkbox values of 0 or 1-5 or 6-10 or 10+</description>
    <label>Number of investment properties sold</label>
    <length>5</length>
    <type>Text</type>
</CustomField>