force-app/main/default/objects/Contact/fields/NumberOfRentalPropertOwned1_5_SBE__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRentalPropertOwned1_5_SBE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBE = Sponsor Background &amp; Experience</description>
    <label>NumberOfRentalPropertOwned 1-5</label>
    <type>Checkbox</type>
</CustomField>