force-app/main/default/objects/Contact/fields/NumberOfRentalPropertOwned_10_SBE__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRentalPropertOwned_10_SBE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBE = Sponsor Background &amp; Experience</description>
    <label>NumberOfRentalPropertOwned 10+</label>
    <type>Checkbox</type>
</CustomField>