force-app/main/default/objects/Contact/fields/Numberofrentalpropsownedoperated__c.field-meta.xml
<CustomField>
    <fullName>Numberofrentalpropsownedoperated__c</fullName>
    <description>Field populated from DocuSign template</description>
    <label>Number of rental props owned/operated</label>
    <length>5</length>
    <type>Text</type>
</CustomField>