force-app/main/default/objects/Contact/fields/Other_Asian__c.field-meta.xml
<CustomField>
    <fullName>Other_Asian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Asian</label>
    <type>Checkbox</type>
</CustomField>