force-app/main/default/objects/Contact/fields/Other_Asian_Print_Race__c.field-meta.xml
<CustomField>
    <fullName>Other_Asian_Print_Race__c</fullName>
    <label>Other Asian - Print Race</label>
    <length>55</length>
    <type>Text</type>
</CustomField>