force-app/main/default/objects/Contact/fields/Other_Hispanic_or_Latino__c.field-meta.xml
<CustomField>
    <fullName>Other_Hispanic_or_Latino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Hispanic or Latino</label>
    <type>Checkbox</type>
</CustomField>