force-app/main/default/objects/Contact/fields/Other_Hispanic_or_Latino_Print_Origin__c.field-meta.xml
<CustomField>
    <fullName>Other_Hispanic_or_Latino_Print_Origin__c</fullName>
    <label>Other Hispanic or Latino - Print Origin:</label>
    <length>55</length>
    <type>Text</type>
</CustomField>