force-app/main/default/objects/Contact/fields/Other_Pacific_Islander__c.field-meta.xml
<CustomField>
    <fullName>Other_Pacific_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Pacific Islander</label>
    <type>Checkbox</type>
</CustomField>