force-app/main/default/objects/Contact/fields/Other_Pacific_Islander_Print_race__c.field-meta.xml
<CustomField>
    <fullName>Other_Pacific_Islander_Print_race__c</fullName>
    <label>Other Pacific Islander - Print race:</label>
    <length>55</length>
    <type>Text</type>
</CustomField>