force-app/main/default/objects/Contact/fields/Other_Please_Describe_SBP__c.field-meta.xml
<CustomField>
    <fullName>Other_Please_Describe_SBP__c</fullName>
    <label>Other* - Please Describe</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>