force-app/main/default/objects/Contact/fields/Other_SBP__c.field-meta.xml
<CustomField>
    <fullName>Other_SBP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other*</label>
    <type>Checkbox</type>
</CustomField>