force-app/main/default/objects/Contact/fields/Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Area_Code__c</fullName>
    <formula>IF(
    ISNUMBER(LEFT(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 3)),
    VALUE(LEFT(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 3)),
    IF(
        AND(
            BEGINS(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), &quot;(&quot;),
            CONTAINS(LEFT(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 5), &quot;)&quot;)
        ),
        VALUE(MID(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 2, 3)),
        IF(
            AND(
                BEGINS(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), &quot;1&quot;),
                CONTAINS(LEFT(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 6), &quot;(&quot;),
                CONTAINS(LEFT(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 6), &quot;)&quot;)
            ),
            VALUE(MID(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 3, 3)),
            IF(
                BEGINS(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), &quot;+1&quot;),
                VALUE(MID(SUBSTITUTE(Phone, &quot; &quot;, &quot;&quot;), 4, 3)),
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Area Code of the Contact&apos;s Phone Number</inlineHelpText>
    <label>Phone Area Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>