force-app/main/default/objects/Contact/fields/Place_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Formation__c</fullName>
    <label>Place of Formation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>