force-app/main/default/objects/Contact/fields/PleaseStateInYourOwnWords_LR__c.field-meta.xml
<CustomField>
    <fullName>PleaseStateInYourOwnWords_LR__c</fullName>
    <description>LR = Loan Request</description>
    <label>PleaseStateInYourOwnWords</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>