force-app/main/default/objects/Contact/fields/Pre_Qual_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qual_Approval_Date__c</fullName>
    <description>Used along with the Pre-Qual picklist options for the Status field</description>
    <inlineHelpText>Date on which contact&apos;s background and credit is approved</inlineHelpText>
    <label>Pre-Qual Approval Date</label>
    <type>Date</type>
</CustomField>