force-app/main/default/objects/Contact/fields/Pre_Qual_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qual_Expiration_Date__c</fullName>
    <formula>ADDMONTHS(Pre_Qual_Approval_Date__c , 6)</formula>
    <inlineHelpText>Pre-Qual Approval Date + 6 months</inlineHelpText>
    <label>Pre-Qual Expiration Date</label>
    <type>Date</type>
</CustomField>