force-app/main/default/objects/Contact/fields/Pres_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Pres_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pres Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>