force-app/main/default/objects/Contact/fields/Pres_ID__c.field-meta.xml
<CustomField>
    <fullName>Pres_ID__c</fullName>
    <formula>Account.Pres_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pres ID</label>
    <type>Text</type>
</CustomField>