force-app/main/default/objects/Contact/fields/Print_Name_of_Enrolled_Principal_Tribe__c.field-meta.xml
<CustomField>
    <fullName>Print_Name_of_Enrolled_Principal_Tribe__c</fullName>
    <label>Print Name of Enrolled/Principal Tribe</label>
    <length>55</length>
    <type>Text</type>
</CustomField>