force-app/main/default/objects/Contact/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>Promo Code requested by marketing</description>
    <label>Promo Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>