force-app/main/default/objects/Contact/fields/Property_Owned_In_This_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Owned_In_This_Name__c</fullName>
    <description>Field found in DocuSign form, Single Project Bridge Loan Application within the Borrower / Entity Informatiomn</description>
    <label>Property Owned In This Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>