force-app/main/default/objects/Contact/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Property Details Section</description>
    <label>Property Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>