force-app/main/default/objects/Contact/fields/Protected_Contact__c.field-meta.xml
<CustomField>
    <fullName>Protected_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent users from being able to update the owner of this record</description>
    <inlineHelpText>This is a Protected Contact.  Only the Owner of the record, Originations Manager and System Administrator can change the Owner.</inlineHelpText>
    <label>Protected Contact</label>
    <type>Checkbox</type>
</CustomField>