force-app/main/default/objects/Contact/fields/PurchasePriceContracedPrice_PD__c.field-meta.xml
<CustomField>
    <fullName>PurchasePriceContracedPrice_PD__c</fullName>
    <description>PD = Property Details</description>
    <label>PurchasePrice(ContracedPrice)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>