force-app/main/default/objects/Contact/fields/Race_I_do_not_wish_to_provide_this_info__c.field-meta.xml
<CustomField>
    <fullName>Race_I_do_not_wish_to_provide_this_info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Race-I do not wish to provide this info</label>
    <type>Checkbox</type>
</CustomField>