force-app/main/default/objects/Contact/fields/Referral_Fees__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fees__c</fullName>
    <label>Referral Fees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Fixed BPS</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>