force-app/main/default/objects/Contact/fields/Renovation_LR__c.field-meta.xml
<CustomField>
    <fullName>Renovation_LR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LR = Loan Request</description>
    <label>Renovation</label>
    <type>Checkbox</type>
</CustomField>