force-app/main/default/objects/Contact/fields/Rental_Units_Owned__c.field-meta.xml
<CustomField>
    <fullName>Rental_Units_Owned__c</fullName>
    <label>Rental Units Owned</label>
    <length>5</length>
    <type>Text</type>
</CustomField>