force-app/main/default/objects/Contact/fields/Repeat_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Borrower__c</fullName>
    <formula>Account.Repeat_Borrower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repeat Borrower</label>
    <type>Checkbox</type>
</CustomField>