force-app/main/default/objects/Contact/fields/Representative_Name_BCI__c.field-meta.xml
<CustomField>
    <fullName>Representative_Name_BCI__c</fullName>
    <description>BCI = Business Entity Information</description>
    <label>Representative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>