force-app/main/default/objects/Contact/fields/ringdna100__Days_Since_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Days_Since_Last_Attempt__c</fullName>
    <formula>IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), NULL, 
IF(AND(!ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Outbound_Call__c), 
IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), !ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Email_Attempt__c), 
IF(ringdna100__Last_Outbound_Call__c &gt; ringdna100__Last_Email_Attempt__c, (NOW() - ringdna100__Last_Outbound_Call__c), (NOW() - ringdna100__Last_Email_Attempt__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>RingDNA field</inlineHelpText>
    <label>Days Since Last Attempt (Call or Email)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>