force-app/main/default/objects/Contact/fields/RSVP_TEST__c.field-meta.xml
<CustomField>
    <fullName>RSVP_TEST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not Used</description>
    <label>RSVP TEST</label>
    <type>Checkbox</type>
</CustomField>