force-app/main/default/objects/Contact/fields/Separated__c.field-meta.xml
<CustomField>
    <fullName>Separated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separated</label>
    <type>Checkbox</type>
</CustomField>