force-app/main/default/objects/Contact/fields/Sex_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sex_Formula__c</fullName>
    <description>Value derived from the label field: Sex (Female / Male / I do not wish to provide this information)</description>
    <formula>Text(Sex__c)</formula>
    <inlineHelpText>Value derived from the label field: Sex (Female / Male / I do not wish to provide this information)</inlineHelpText>
    <label>Sex</label>
    <type>Text</type>
</CustomField>