force-app/main/default/objects/Contact/fields/Sex_I_do_not_wish_to_provide__c.field-meta.xml
<CustomField>
    <fullName>Sex_I_do_not_wish_to_provide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sex - I do not wish to provide</label>
    <type>Checkbox</type>
</CustomField>