force-app/main/default/objects/Contact/fields/Sex_Male__c.field-meta.xml
<CustomField>
    <fullName>Sex_Male__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sex - Male</label>
    <type>Checkbox</type>
</CustomField>