force-app/main/default/objects/Contact/fields/SmartyStreet_Verified_and_Updated__c.field-meta.xml
<CustomField>
    <fullName>SmartyStreet_Verified_and_Updated__c</fullName>
    <description>Used by Brad and Andy for SmartyStreet Data Cleansing.</description>
    <inlineHelpText>Used by Brad and Andy for SmartyStreet Data Cleansing.</inlineHelpText>
    <label>SmartyStreet Verified and Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match-Inactive</fullName>
            </value>
            <value>
                <fullName>Match-Mailable</fullName>
            </value>
            <value>
                <fullName>Match-Vacant</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>No Match - PO Box Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>