force-app/main/default/objects/Contact/fields/Sole_proprietorship__c.field-meta.xml
<CustomField>
    <fullName>Sole_proprietorship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sole proprietorship</label>
    <type>Checkbox</type>
</CustomField>