force-app/main/default/objects/Contact/fields/Sponsor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Tier__c</fullName>
    <description>Bridge Use</description>
    <label>Sponsor Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>