force-app/main/default/objects/Contact/fields/SponsorBorrower_Est_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>SponsorBorrower_Est_As_Of_Date__c</fullName>
    <description>SBE = Sponsor Background &amp; Experience</description>
    <label>Sponsor/Borrower Est As Of Date</label>
    <type>Date</type>
</CustomField>