force-app/main/default/objects/Contact/fields/SponsorBorrowersEstTotalValue_SBE__c.field-meta.xml
<CustomField>
    <fullName>SponsorBorrowersEstTotalValue_SBE__c</fullName>
    <description>SBE = Sponsor Background &amp; Experience</description>
    <label>Sponsor/Borrowers Est Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>