force-app/main/default/objects/Contact/fields/SponsorBorrowersEstValueLiab_SBE__c.field-meta.xml
<CustomField>
    <fullName>SponsorBorrowersEstValueLiab_SBE__c</fullName>
    <description>SBE = Sponsor Background &amp; Experience</description>
    <label>Sponsor/Borrower&apos;s Est Value Liab</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>