force-app/main/default/objects/Contact/fields/SponsorCity__c.field-meta.xml
<CustomField>
    <fullName>SponsorCity__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor City</label>
    <length>55</length>
    <type>Text</type>
</CustomField>