force-app/main/default/objects/Contact/fields/SponsorDateofBirth__c.field-meta.xml
<CustomField>
    <fullName>SponsorDateofBirth__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Date of Birth</label>
    <type>Date</type>
</CustomField>