force-app/main/default/objects/Contact/fields/SponsorEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SponsorEmailAddress__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Email Address</label>
    <type>Email</type>
</CustomField>