force-app/main/default/objects/Contact/fields/SponsorFirstName__c.field-meta.xml
<CustomField>
    <fullName>SponsorFirstName__c</fullName>
    <description>DocuSign Integration with App</description>
    <label>Sponsor First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>