force-app/main/default/objects/Contact/fields/SponsorHomeAddress__c.field-meta.xml
<CustomField>
    <fullName>SponsorHomeAddress__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Home Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>