force-app/main/default/objects/Contact/fields/SponsorLastName__c.field-meta.xml
<CustomField>
    <fullName>SponsorLastName__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>