force-app/main/default/objects/Contact/fields/SponsorMiddleName__c.field-meta.xml
<CustomField>
    <fullName>SponsorMiddleName__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>