force-app/main/default/objects/Contact/fields/SponsorMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>SponsorMobilePhone__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Mobile Phone</label>
    <type>Phone</type>
</CustomField>