force-app/main/default/objects/Contact/fields/SponsorPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SponsorPhoneNumber__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Phone Number</label>
    <type>Phone</type>
</CustomField>