force-app/main/default/objects/Contact/fields/SponsorState__c.field-meta.xml
<CustomField>
    <fullName>SponsorState__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor State</label>
    <length>75</length>
    <type>Text</type>
</CustomField>