force-app/main/default/objects/Contact/fields/SponsorZipCode__c.field-meta.xml
<CustomField>
    <fullName>SponsorZipCode__c</fullName>
    <description>DocuSign App Integration</description>
    <label>Sponsor Zip Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>