force-app/main/default/objects/Contact/fields/State_BCI__c.field-meta.xml
<CustomField>
    <fullName>State_BCI__c</fullName>
    <description>BCI = Business Entity Information</description>
    <label>State BCI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>