force-app/main/default/objects/Contact/fields/State_PD__c.field-meta.xml
<CustomField>
    <fullName>State_PD__c</fullName>
    <description>PD = Property Details</description>
    <label>State PD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>