force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Status of this Contact</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Prospect</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Experience</fullName>
            </value>
            <value>
                <fullName>Future Prospect - FICO</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Income</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Liquidity</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Product Type</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Short Term Rental</fullName>
            </value>
            <value>
                <fullName>Deceased/ Not Reachable</fullName>
            </value>
            <value>
                <fullName>Moved/Changed Contact Info</fullName>
            </value>
            <value>
                <fullName>Retired/Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>