force-app/main/default/objects/Contact/fields/Street_Address_BCI__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_BCI__c</fullName>
    <description>BCI = Business Entity Information</description>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>