force-app/main/default/objects/Contact/fields/Street_Address_PD__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_PD__c</fullName>
    <description>PD = Property Details</description>
    <label>Street Address PD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>