force-app/main/default/objects/Contact/fields/TEST_RSVP_EVENTS__c.field-meta.xml
<CustomField>
    <fullName>TEST_RSVP_EVENTS__c</fullName>
    <description>Not Used</description>
    <label>[TEST] RSVP EVENTS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cocktails and Conversations</fullName>
            </value>
            <value>
                <fullName>Hawaiian Luau</fullName>
            </value>
            <value>
                <fullName>Dance Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>