force-app/main/default/objects/Contact/fields/TotalLoanAmountRequested__c.field-meta.xml
<CustomField>
    <fullName>TotalLoanAmountRequested__c</fullName>
    <label>TotalLoanAmountRequested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>