force-app/main/default/objects/Contact/fields/Track_RecordExperience_SBE__c.field-meta.xml
<CustomField>
    <fullName>Track_RecordExperience_SBE__c</fullName>
    <description>SBE = Sponsor Background &amp; Experience</description>
    <label>Track Record/Experience</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>