force-app/main/default/objects/Contact/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>Property Details</description>
    <label>TransactionType</label>
    <length>15</length>
    <type>Text</type>
</CustomField>