force-app/main/default/objects/Contact/fields/TransactionType_Refinance_PD__c.field-meta.xml
<CustomField>
    <fullName>TransactionType_Refinance_PD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PD = Property Details</description>
    <label>TransactionType Refinance</label>
    <type>Checkbox</type>
</CustomField>