force-app/main/default/objects/Contact/fields/TransUnion__c.field-meta.xml
<CustomField>
    <fullName>TransUnion__c</fullName>
    <label>TransUnion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>