force-app/main/default/objects/Contact/fields/TypeofCompany__c.field-meta.xml
<CustomField>
    <fullName>TypeofCompany__c</fullName>
    <description>The value for this field derives from the templates in DocuSign</description>
    <label>Type of Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>