force-app/main/default/objects/Contact/fields/Unmarried__c.field-meta.xml
<CustomField>
    <fullName>Unmarried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unmarried</label>
    <type>Checkbox</type>
</CustomField>