force-app/main/default/objects/Contact/fields/Updated_By_CTM__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_CTM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated By CTM</label>
    <type>Checkbox</type>
</CustomField>