force-app/main/default/objects/Contact/fields/Updated_UTM_by_CTM__c.field-meta.xml
<CustomField>
    <fullName>Updated_UTM_by_CTM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated UTM by CTM</label>
    <type>Checkbox</type>
</CustomField>