force-app/main/default/objects/Contact/fields/Uploaded_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_URL__c</fullName>
    <description>URL of the file uploaded in Gravity Forms.</description>
    <inlineHelpText>URL of the file uploaded when filling out the forms on corevestfinance.com</inlineHelpText>
    <label>Uploaded File URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>